# trading-robot-samokat

./: .gitignore  Dockerfile  Dockerfile_fullbuild  Dockerfile_real  pyproject.toml  requirements.txt  template.env
trading_bot/: alembic.ini  main.py
trading_bot/alembic/: env.py
trading_bot/alembic/versions/: .keep
trading_bot/api/: __init__.py
trading_bot/api/api_v1/: __init__.py  account.py  trade.py  users.py
trading_bot/common/: _logger.py  logger.py
trading_bot/core/: config.py  dependencies.py
trading_bot/core/schemas/: account.py  order.py  users.py
trading_bot/db/: __init__.py  base.py  db_helper.py
trading_bot/db/crud/: users.py
trading_bot/db/models/: __init__.py  account.py  user.py
trading_bot/trader/: __init__.py  run.py
trading_bot/trader/_enums/: __init__.py  states.py  timeframes.py
trading_bot/trader/core/: cfg.py  clients.py  data_controller.py  safe_scheduler.py  settings.py  storage.py  trader.cfg  trader.py  util.py
trading_bot/trader/indicators/: alligator.py  indicator.py  moving_average.py
trading_bot/trader/models/: __init__.py  container.py  position.py  symbol.py  symbol_kline.py  timeframe.py
trading_bot/trader/strategies/: abstract_strategy.py  tripple_screen_strategy.py
trading_bot/trading/: run.py  trader.cfg
trading_bot/trading/analize/: cross_ma.ipynb  data_for_testing.py  my_app_demo.ipynb  my_app_demo.py  my_app_real.py
trading_bot/trading/core/: account.py  broker.py  clients.py  config.py  config_.py  data_controller.py  safe_scheduler.py  settings.py  storage.py  trader.py  util.py
trading_bot/trading/db/: README  __init__.py  db_helper_binance.py
trading_bot/trading/enums/: __init__.py  alligator_direction.py  enums.py  ma_states.py  timeframes.py
trading_bot/utils/: __init__.py  case_converter.py
(+20 files in other folders)
