# trading_bot/pyproject.toml

[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = "Automated trading bot using Binance API"
authors = ["iHOR <zenbool.ua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.4"
fastapi = {extras = ["all"], version = "^0.111"}
binance-connector = "^3.9"
pandas = "^2.2.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.4.0"
asyncio = "^3.4"
sqlalchemy = {extras = ["all"], version = "^2.0"}
asyncpg = "^0.29"
uvicorn = {extras = ["standard"], version = "^0.30.6"}
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
