# trading_bot/pyproject.toml

[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = "Automated trading bot using Binance API"
authors = ["iHOR <zenbool.ua@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aio-pika = "^9.4"
fastapi = {extras = ["all"], version = "^0.115"}
binance-connector = "^3.9"
pandas = "^2.2.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.4.0"
asyncio = "^3.4"
sqlalchemy = {extras = ["all"], version = "^2.0"}
asyncpg = "^0.30"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
alembic = "^1.14.0"
loguru = "^0.7.2"
schedule = "^1.2.2"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.8.0"
notebook = "^7.3.1"
jupyter = "^1.1.1"
openpyxl = "^3.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
